integration_tests/codegen_fail/fail/scalar_value/missing_attributes.stderr
error: GraphQL built-in scalars missing `#[graphql(as_int, as_float)]` attributes. In case you are sure that it is ok, use `#[graphql(allow_missing_attributes)]` to suppress this error.
  --> fail/scalar_value/missing_attributes.rs:4:1
   |
4  | / pub enum DefaultScalarValue {
5  | |     Int(i32),
6  | |     Float(f64),
7  | |     #[graphql(as_str, as_string, into_string)]
...  |
10 | |     Boolean(bool),
11 | | }
   | |_^
